@@ -1,3 +1,6 @@
+2015-12-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
+	* Fix for password edition
+
 2015-12-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix for the login forms
 	* Fix for edit link after login
